# safety_sys

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
WebcamPoseDetection/: .gitignore  download_model.py  pose33_realtime_optimized.py  test_setup.py  webcam_pose_minimal.py  webcam_pose_simple.py
doc/: huawei_cloud_integration.md
docs/: device_logic.md  exam_doc.md  huawei_iotda_setup.md  local_simulation.md  object_protection.md  system_architecture.md  webcam_pose_detection.md  webcam_pose_detection_structure.md
envs/: example_human_det_environments.yml
firmware/esp32_s3_security_node/: README.md  esp32_s3_security_node.ino
object_protection/: general.py  integrated_safety_monitor.py  video_relic_tracking.py
src/cv_safety_sys/: __init__.py
src/cv_safety_sys/alarm/: __init__.py  alarm_manager.py  huawei_iotda.py
src/cv_safety_sys/cloud/: __init__.py  huawei_cloud_adapter.py  huawei_cloud_settings.py
src/cv_safety_sys/detection/: __init__.py  yolov7_tracker.py
src/cv_safety_sys/devices/: __init__.py  controller.py  mpu6050.py  tcrt5000.py
src/cv_safety_sys/monitoring/: __init__.py  integrated_monitor.py
src/cv_safety_sys/pose/: __init__.py  model_downloader.py
src/cv_safety_sys/ui/: __init__.py  qt_monitor.py
src/cv_safety_sys/utils/: __init__.py  text_renderer.py
tests/: testcases_alarm_manager.py  testcases_devices.py  testcases_huawei_iotda.py
webui/: .gitignore  app.py  requirements.txt  stream_handler.py
webui/static/: main.js  style.css
webui/templates/: index.html
